doc: add documentation for route - /users/sales/pitchReq
